oauth2-dex/oauth2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: default
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 1
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --client-id=oauth2_proxy-s03
        - --client-secret=ZXhhbXBsZS1hcHAtc2VjcmV0
        - --cookie-secure=true
        - --email-domain=*
        - --oidc-issuer-url=https://dex.c.kube.tensorstack.net
        - --redirect-url=https://proxy.s.kube.tensorstack.net/oauth2/callback
        - --upstream=http://istio-ingressgateway.istio-system.svc.cluster.local/
        - --http-address=0.0.0.0:4180
        - --pass-authorization-header=true
        - --pass-basic-auth=true
        - --pass-access-token=true
        - --set-authorization-header=true
        - --scope=openid profile email groups audience:server:client_id:gangway-s03
        image: quay.io/pusher/oauth2_proxy:v3.2.0
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
